@@ -65,6 +65,7 @@ following names for their contribution to the product.
 * church of emacs
 * Daniel Arnold
 * Danny B.
+* Derk-Jan Hartman
 * FunPika
 * Happy-melon
 * Jeremy Baron
